Revised text in all Work pages

--- a/About/about-me.html
+++ b/About/about-me.html
@@ -84,23 +84,21 @@
         </div>
         <div class = "small-spacer">
         </div>
+        <div class = "small-spacer">
+        </div>
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-              <p>Hey there! I am Ruta Gokhale. I like chocolate chip cookies, morning hikes, making art, and lazy afternoons!<br>
-                I am a User Experience Designer - what that means is,
-                I solve different kinds of problems! I spend most of my time talking to a lot of people, asking many questions, sketching ideas, and ultimately making sure the problem has an effective solution.</p>
-              <p>I believe design is a process, not a result. It is a mindset that helps you find the right solution to the right problem.
-                After working for 4+ years in the enterprise software space, I've come to realize, problems come with ambiguities and their fair share of constraints.
-                And therefore, I think two things are most important to the craft of UX - empathy for the user and exploring creativity <i>within</i>&nbsp the box.</p>
-              <p>Most recently, I worked at Collibra, designing experiences for a SaaS offering that enables privacy teams to create policies that protect
-                sensitive information in an organization and optimize access management. Previously, I have worked at Thomson Reuters and Menlo Innovations
-                designing web-based enterprise software and workflows.</p>
-              <p>I have always thought of myself as a student of science with a passion for art. So when I stumbled upon the field of Design, I had to go for it!
-                I completed my Bachelor's degree in Computer Science. I then pursued a Master's degree in Human-Computer Interaction from
-                the University of Michigan, Ann Arbor (Go Blue!). Today, I consider myself lucky to work in a role where engineering, design, and people converge.</p>
+              <p>Hey there! I am Ruta Gokhale. I like chocolate chip cookies, making art, and doing morning hikes.<br>
+                I am a UX Designer. Most recently, I worked at Collibra, designing experiences for a SaaS offering that helps privacy teams in an organization.
+                I enjoy tinkering with things and solving problems for enterprise, B2B software, and SaaS products. </p>
+              <p>I believe design is a process, not an outcome. It is a mindset that helps you find the right solution to the right problem. After working for
+                4+ years as a designer, I’ve come to realize, problems come with ambiguities and their fair share of constraints. And therefore, I believe
+                two things are most important to the craft of UX - empathy for the user and exploring creativity <i>within</i>&nbsp the box.</p>
+              <p>I graduated from University of Michigan(Go Blue!) with a master’s degree in Human-Computer Interaction.
+                I completed my undergraduate education in Computer Science. Today, I am lucky to work in a role where design, engineering, and people converge.</p>
               <p>If you want to chat about design, or simply get in touch, reach out to me via
-              <a id = "link" target="_blank" href="https://www.linkedin.com/in/rutagokhale/">LinkedIn</a> or email (<strong>ruta.gokhale6@gmail.com</strong>).
+              <a id = "link" target="_blank" href="https://www.linkedin.com/in/rutagokhale/">LinkedIn</a> or email(<i>ruta.gokhale6@gmail.com</i>).
               I am always down for a cup of coffee or a good conversation!</p>
             </div>
         </div>
