--- a/Work/collibra.html
+++ b/Work/collibra.html
@@ -81,13 +81,9 @@
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
                 <p><a target="_blank" href="https://www.collibra.com/us/en/company/who-we-are" id = "link">Collibra</a> is a data intelligence and data governance company.
-                  Collibra provides a suite of SaaS products, specializing as a master meta-data management company. I worked as a Sr. User Experience Designer
-                  on the Protect product. <span id="imp"> <a target="_blank" href="https://www.collibra.com/us/en/products/protect" id = "link">Collibra Protect</a>
-                allows privacy teams to streamline access to organizational data through a set of rules and permissions.</span><br>
-                I have outlined details about my work for Collibra Protect in this case study. Please email me at <strong>ruta.gokhale6@gmail.com</strong>
-                  to access it.<br>
-                <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link">Link to case study (password protected)</a></p>
-
+                  Collibra provides a suite of SaaS products, specializing as a master meta-data management company. <span id="imp">I worked as a Sr. User Experience Designer
+                  on the Protect product. <a target="_blank" href="https://www.collibra.com/us/en/products/protect" id = "link">Collibra Protect</a>
+                allows privacy teams to streamline access to organizational data through a set of rules and permissions.</span></p>
             </div>
         </div>
 
@@ -96,29 +92,43 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-              <p>In my role as a designer,<br>
-              — &nbsp I improved the overall usability of the application, specifically the access rule creation feature which forms the crux of the application.<br>
-              — &nbsp Led the beta program to get feedback from prospective customers in partnership with UX research, product management, and Customer Success Manager.<br>
-              — &nbsp Facilitated strategic conversations and working sessions with the product team for planning work, navigating technical challenges, and cross-functional collaboration.
+                <p>I have outlined details about my work for Collibra Protect in this case study. Please email me at <i>ruta.gokhale6@gmail.com</i> to access it.<br>
+                <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link">Link to case study (password protected)</a></p>
+            </div>
+        </div>
+
+        <div class = "small-spacer">
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-7">
+              <p><span id="imp">In my role as a designer,</span><br>
+              — &nbsp Improved the overall usability of the application, specifically the access rule creation feature which forms the crux of the application.<br>
+              — &nbsp Led the beta program to get feedback from prospective customers in partnership with UX research, product management, and customer success.<br>
+              — &nbsp Facilitated strategic conversations and working sessions with the product team for planning work, navigating technical challenges,
+              and cross-functional collaboration.
               </p>
             </div>
         </div>
 
         <div class = "small-spacer">
         </div>
+        <div class = "small-spacer">
+        </div>
+
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
                 <p>At Collibra, I got the opportunity to lead and co-own different projects. Reflecting on my work and responsibilities,
-                  these were some of the things I did - </p>
+                  these were some of the things I did in addition to designing:</p>
                   <ul>
-                      <li><h3>Achieve stakeholder alignment</h3>
+                      <li><i>Achieve stakeholder alignment</i>
                         <p>This was the most important part of my job, especially during the initial stages of a project. I worked with the product manager to
                           scope features by reviewing available data and taking informed next steps.</p></li>
-                      <li><h3>Evolve the design process</h3>
+                      <li><i>Evolve the design process</i>
                         <p>This was a fun part of my job where all of us were working towards a common goal of making collaboration effective and efficient,
                           be it through mini-workshops, frequent touchpoints, clearer user stories, or specific Slack updates. </p></li>
-                      <li><h3>Collaborate successfully across time zones</h3>
+                      <li><i>Collaborate successfully across time zones</i>
                         <p>I joined this company and my team remotely. My product team and I were separated by a 9-hour time difference. I improved my skills
                           in design documentation and written collaboration which allowed for asynchronous communication.</p></li>
                   </ul>
@@ -127,11 +137,14 @@
 
         <div class = "small-spacer">
         </div>
+        <div class = "small-spacer">
+        </div>
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>This was really the first time where I was in a position to lead things. This experience helped me build my skillset beyond
-                  the hard design skills. Working in this start-up environment was an experience full of growth and learning.</p>
+              <h2>REFLECTIONS</h2>
+              <p>This was really the first time where <span id="imp"> I was in a position to lead things. This experience helped me build my skillset beyond
+                the hard design skills.</span> Working in this start-up environment was an experience full of growth and learning.</p>
             </div>
         </div>
 
