--- a/Work/menlo-innovations.html
+++ b/Work/menlo-innovations.html
@@ -82,7 +82,7 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p><a id = "link" target="_blank" href="https://menloinnovations.com/">Menlo Innovations</a> is a design and development agency based in Ann Arbor, MI.
+                <p><a id = "link" target="_blank" href="https://menloinnovations.com/">Menlo Innovations</a> is a design and development agency based in Ann Arbor.
                   As a Product Designer, my role was largely focused on doing UX design work, accompanied by user research and product strategy.</p>
             </div>
         </div>
@@ -96,13 +96,12 @@
                     <ul>
                         <li>I was <span id="imp">paired with a fellow designer throughout the day.</span> To paint you a picture, that meant sharing a
                           single computer, mouse, and keyboard between two people!</li>
-                        <li>I <span id="imp">co-designed wireframes for various B2B software.</span> To enable effective collaboration,
-                          I practiced thinking out loud and asking for feedback often.</li>
-                        <li>I worked in agile teams that operated on a weekly cadence. As designers, we also
-                          <span id="imp">estimated user stories, provided design support to front-end developers, and presented our work to clients.</span></li>
-                        <li>I <span id="imp">wrote user stories</span> for every design I created, <span id="imp">describing the intent and specs</span>
-                          for the developers to work on.</li>
-                        <li>I collaborated with the Project Manager for <span id="imp">planning, prioritizing, and scheduling work</span> based on business outcomes and user data.</li>
+                        <li>I <span id="imp">co-designed wireframes for custom B2B software</span> fostering effective collaboration, by ‘thinking-out-loud’
+                          and regular feedback. </li>
+                        <li>We <span id="imp">presented our work to clients, provided design support to front-end developers, and estimated user stories.</span></li>
+                        <li>I <span id="imp">wrote user stories</span> for each interface I created, <span id="imp">providing clear intent and
+                          specifications for developers</span> to follow.</li>
+                        <li>I collaborated with the Project Manager, ensuring efficient <span id="imp">planning, prioritization, and scheduling of work based on business outcomes and user research.</span></li>
                     </ul>
                 </p>
             </div>
@@ -111,22 +110,15 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>Across different projects, I worked in these domains - furniture data management, church participation tracking, speaking bureaus, custom accounting systems, etc.</p>
-                <p id="second-para">At Menlo, we followed a discovery and design process that was modified for different projects, based on
-                  client requirements, project outcomes, timelines, and budgets. The process was aimed at 
-                  <span id="imp">helping clients think about the big picture and prioritize their business objectives.</span></p>
+                <p>Across different projects, I worked in a variety of domains - furniture data management, church participation tracking,
+                  speaking bureaus, custom accounting systems, etc.</p>
             </div>
         </div>
 
-        <div class = "small-spacer">
-        </div>
+        <!--<div class = "d-flex justify-content-center">
+              <img src="Images/menloprocess.png" class = "img-fluid mx-auto d-block" alt = "Design process at Thomson Reuters">
+        </div>-->
 
-        <div class = "d-flex justify-content-center">
-            <img src="Images/menloprocess.png" class = "img-fluid mx-auto d-block" alt = "Design process at Menlo Innovations">
-        </div>
-
-        <div class = "small-spacer">
-        </div>
         <div class = "small-spacer">
         </div>
         <div class = "small-spacer">
@@ -134,12 +126,11 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-              <p>Working in an agency-based company, <span id="imp">my biggest takeaway was approaching the UX process as a risk mitigation tool!</span>
-              The user-centered design process helps you to test hypotheses, validate assumptions, and pivot when necessary.
-              If done right, this can effectively help save on the development effort of a product. <span id="imp">Helping clients think about the design and discovery
-                work through this lens convinced them to invest in this process.</span></p>
-              <p id="second-para">Another important realization was, <span id="imp">all problems don't necessarily have a software-based solution.</span>
-              Sometimes, it's the process (workflow outside of using the software/tool) that needs to be modified to solve the problem.</p>
+              <h2>REFLECTIONS</h2>
+              <p>Working in an agency, my biggest takeaway was <span id="imp">approaching the UX process as a risk mitigation tool. The process was aimed at
+                helping clients think about the big picture and prioritize their business objectives.</span> Another important realization was,
+                <span id="imp">all problems don't necessarily have a software-based solution.</span> Sometimes, it's the process, outside of using a software/tool
+                that needs to be modified to solve the problem.</p>
             </div>
         </div>
     </div>
