--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
       <a href="About/about-me.html">
         <h1 class="title">RUTA GOKHALE</h1>
       </a>
-      <p>a UX Designer creating thoughtful and scalable workflows<br>
+      <p>a UX Designer creating thoughtful experiences and scalable workflows<br>
       by embracing the complexity of enterprise software and SaaS products.
     </p>
     </div>
     <div class="col-md-1 giffy">
       <img src = "Images/thoughts.gif" class = "img-fluid" alt = "GIF that depicts throught process">
     </div>
+  </div>
+
+  <div class = "small-spacer">
   </div>
 
 
