--- a/Work/thomson-reuters.html
+++ b/Work/thomson-reuters.html
@@ -83,8 +83,8 @@
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
                 <p><a id = "link" target="_blank" href="https://tax.thomsonreuters.com/en">Thomson Reuters</a> makes tax, accounting, and compliance solutions.
-                  I worked as a UX Designer for the Onvio Platform, which <span id="imp">provides end-to-end tax solutions for small to mid-sized accounting firms and businesses.</span>
-                  I cannot share all the details of my work, but I can talk about the design process I use in my projects.</p>
+                I worked as a UX Designer for the Onvio Platform, which <span id="imp">provides end-to-end tax solutions for small to mid-sized accounting firms and
+                businesses.</span> I worked on multiple projects, collaborated with different stakeholders, and produced deliverables with different levels of fidelity.</p>
             </div>
         </div>
 
@@ -93,32 +93,18 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>I worked on multiple projects, collaborated with different stakeholders, and produced deliverables with various levels of fidelity.
-                  <span id="imp">I improved the usability of existing features, designed new features based on product roadmaps, and was involved in various user research sessions.</span>
+                <p><span id="imp">In my role as a designer,</span><br>
+                  — &nbsp Re-designed existing features, improving its usability and giving a facelift to the UI.<br>
+                  — &nbsp Planned for successive integration of new functionality into applications, and planned its development with the product team.<br>
+                  — &nbsp Contributed to the broader design team through design critiques, process improvement discussions, and design system overhaul.
                 </p>
             </div>
         </div>
 
-        <div class = "small-spacer">
-        </div>
+        <!--<div class = "d-flex justify-content-center">
+              <img src="Images/trprocess.png" class = "img-fluid mx-auto d-block" alt = "Design process at Thomson Reuters">
+        </div>-->
 
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-7">
-                <p>Within the design organization, we’ve faced some challenges. However, our design culture and processes improved considerably since I started,
-                  and have seen many positive changes. We refined our design process to have frequent touchpoints and critique sessions, and collaborate more closely with our
-                  product partners to integrate their input from early on. A brief snapshot of the process - </p>
-            </div>
-        </div>
-
-        <div class = "small-spacer">
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <img src="Images/trprocess.png" class = "img-fluid mx-auto d-block" alt = "Design process at Thomson Reuters">
-        </div>
-
-        <div class = "small-spacer">
-        </div>
         <div class = "small-spacer">
         </div>
         <div class = "small-spacer">
@@ -126,11 +112,10 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>The most important thing I learned during my time at Thomson Reuters was the importance of communication -
-                  <span id="imp">communicating clearly how a design works, communicating the impact of the proposed design, and then defending those decisions where necessary.</span>
-                  With software that's already being used by a large number of customers, it is difficult to implement a new design all at once. So as a designer,
-                  I had to be proactive in thinking about a potential rollout plan.
-                </p>
+              <h2>REFLECTIONS</h2>
+              <p>The most important thing I learned during my time at Thomson Reuters was the importance of communication, <span id="imp">communicating clearly -
+                how a design works, the impact of the proposed design, and then defending those decisions where necessary.</span>
+                With software that's already being used by a large number of customers, it’s equally important to plan for the rollout of the new design.</p>
             </div>
         </div>
 
