--- a/Work/collibra.html
+++ b/Work/collibra.html
@@ -92,8 +92,8 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>I have outlined details about my work for Collibra Protect in this case study. Please email me at <i>ruta.gokhale6@gmail.com</i> to access it.<br>
-                <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link">Link to case study (password protected)</a></p>
+                <p>I have outlined details about my work for Collibra Protect.<br>
+                <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link">Link to case study</a></p>
             </div>
         </div>
 
