changed formatting of the link

--- a/Work/collibra.html
+++ b/Work/collibra.html
@@ -92,8 +92,8 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
-                <p>I have outlined details about my work for Collibra Protect.<br>
-                <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link">Link to case study</a></p>
+                <p>I have outlined details about my work for Collibra Protect - 
+                <a target="_blank" href="RG_Collibra_CaseStudy.pdf" id = "link"><span id="imp">Link to case study</span></a></p>
             </div>
         </div>
 
