bunch of changes, but mainly just added the case study

--- a/Work/thomson-reuters.html
+++ b/Work/thomson-reuters.html
@@ -20,7 +20,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
@@ -83,8 +83,8 @@
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
                 <p><a id = "link" target="_blank" href="https://tax.thomsonreuters.com/en">Thomson Reuters</a> makes tax, accounting, and compliance solutions.
-                I worked as a UX Designer for the Onvio Platform, which <span id="imp">provides end-to-end tax solutions for small to mid-sized accounting firms and
-                businesses.</span> I worked on multiple projects, collaborated with different stakeholders, and produced deliverables with different levels of fidelity.</p>
+                  I worked as a UX Designer for the Onvio Platform, which <span id="imp">provides end-to-end tax solutions for small to mid-sized accounting firms
+                    and businesses.</span>  I worked on multiple projects, collaborated with different stakeholders, and produced deliverables with different levels of fidelity.</p>
             </div>
         </div>
 
@@ -94,16 +94,12 @@
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
                 <p><span id="imp">In my role as a designer,</span><br>
-                  — &nbsp Re-designed existing features, improving its usability and giving a facelift to the UI.<br>
-                  — &nbsp Planned for successive integration of new functionality into applications, and planned its development with the product team.<br>
-                  — &nbsp Contributed to the broader design team through design critiques, process improvement discussions, and design system overhaul.
+                        — &nbsp Re-designed existing features, improving its usability and giving a facelift to the UI.<br>
+                        — &nbsp Planned for successive integration of new functionality into applications, and planned its development with the product team.<br>
+                        — &nbsp Contributed to the broader design team through design critiques, process improvement discussions, and design system overhaul.
                 </p>
             </div>
         </div>
-
-        <!--<div class = "d-flex justify-content-center">
-              <img src="Images/trprocess.png" class = "img-fluid mx-auto d-block" alt = "Design process at Thomson Reuters">
-        </div>-->
 
         <div class = "small-spacer">
         </div>
@@ -113,15 +109,15 @@
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-7">
               <h2>REFLECTIONS</h2>
-              <p>The most important thing I learned during my time at Thomson Reuters was the importance of communication, <span id="imp">communicating clearly -
-                how a design works, the impact of the proposed design, and then defending those decisions where necessary.</span>
-                With software that's already being used by a large number of customers, it’s equally important to plan for the rollout of the new design.</p>
+              <p>The most important thing I learned during my time at Thomson Reuters was the importance of communication,
+                <span id="imp">communicating clearly - how a design works, the impact of the proposed design, and then defending those decisions
+                  where necessary.</span> With software that's already being used by a large number of customers, it’s equally important
+                  to plan for the rollout of the new design.</p>
             </div>
         </div>
-
-
-
     </div>
+
+
 
     <div class = "jumbotron jumbotron-fluid text-center" id = "page-footer">
         <footer class = "footer">
@@ -132,9 +128,9 @@
     </div>
 
 
-    <!--JavaScript Files-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <!--JavaScript Files-->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
 </body>
