--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <p>a UX Designer creating thoughtful experiences and scalable workflows<br>
       by embracing the complexity of enterprise software and SaaS products.
     </p>
+    <p><a id = "link" target="_blank" href="Work/Collibra_Case_Study.pdf">View my latest case study ➔</a></p>
     </div>
     <div class="col-md-1 giffy">
       <img src = "Images/thoughts.gif" class = "img-fluid" alt = "GIF that depicts throught process">
@@ -95,15 +96,15 @@
 
   <div class = "container container-fluid">
     <div class = "d-flex justify-content-center">
-      <div class = "row">
+      <div class = "row d-flex justify-content-center">
 
         <div class="col-md-4">
           <div class = "card">
               <a href = "Work/collibra.html">
-                  <img src = "Images/collibracover.png" class = "card-img-top img-fluid" alt = "Collibra project thumbnail">
+                  <img src = "Images/collibracover.png" class = "card-img-top img-fluid" alt = "Collibra case study thumbnail">
                   <div class="card-body">
-                      <h3 class = "card-title d-flex justify-content-center">COLLIBRA</h3>
-                      <p class = "card-text text-center">Co-led design efforts to launch a new data-security application</p>
+                    <h3 class = "card-title d-flex justify-content-center">COLLIBRA</h3>
+                    <p class = "card-text text-center">Co-led design efforts to launch a new data-security application</p>
                   </div>
               </a>
           </div>
@@ -112,9 +113,9 @@
         <div class="col-md-4">
           <div class = "card">
               <a href = "Work/thomson-reuters.html">
-                  <img src = "Images/thomsonreuterscover.png" class = "card-img-top img-fluid" alt = "Thomson Reuters project thumbnail">
+                  <img src = "Images/thomsonreuterscover.png" class = "card-img-top img-fluid" alt = "Work experiences thumbnail">
                   <div class="card-body">
-                      <h3 class = "card-title d-flex justify-content-center">THOMSON REUTERS</h3>
+                    <h3 class = "card-title d-flex justify-content-center">THOMSON REUTERS</h3>
                       <p class = "card-text text-center">Improved existing features for web-based tax software</p>
                   </div>
               </a>
@@ -124,9 +125,9 @@
         <div class="col-md-4">
           <div class = "card">
               <a href = "Work/menlo-innovations.html">
-                  <img src = "Images/menlocover.png" class = "card-img-top img-fluid" alt = "Menlo Innovations project thumbnail">
+                  <img src = "Images/menlocover.png" class = "card-img-top img-fluid" alt = "Work experiences thumbnail">
                   <div class="card-body">
-                      <h3 class = "card-title d-flex justify-content-center">MENLO INNOVATIONS</h3>
+                    <h3 class = "card-title d-flex justify-content-center">MENLO INNOVATIONS</h3>
                       <p class = "card-text text-center">Consulted clients for UX design and strategy needs</p>
                   </div>
               </a>
